# agent-city

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agentcity/: main.py
agentcity/ai/: needs.py
agentcity/ai/behaviors/: __init__.py  needs.py  wandering.py
agentcity/engine/: game.py  time_system.py
agentcity/entities/: agent.py  building.py  objects.py
agentcity/world/: city.py
src/: __init__.py  main.py
src/ai/: brain.py  needs.py
src/engine/: game.py  time_system.py
src/entities/: agent.py
src/world/: city.py
