[project]
name = "agentcity"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik Bjäreholt",email = "erik@bjareho.lt"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame"
]

[project.scripts]
agentcity = 'agentcity.main:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP"]
ignore = ["E402", "E501", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
